--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -1,3 +1,10 @@
+
+.card-title,
+.card-text {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+}
+
 .fa-2xl {
   color:orange;
 }
