--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,23 @@
     type="text/css" />
 
     <div class="container-fluid">
-        <div class="row text-center">
-            <div class="col">
+        <div class="row">
+            <div class="col-sm col-sm-6 col-md-6 mt-5">
+                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_test.jpg" class="img-fluid" alt="man and woman exercising" />
+            </div>
+            <div class="col-sm col-sm-6 col-md-6 mt-5 col align-self-center">
+                <h5>Welcome to Love Fitness</h5>
+                    <h2>Smash all your fitness goals</h2>
+                    <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,bodysuits,shorts_women,nutrition,fitness_equipment" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disaabled="true">
+                        shop now
+                    </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_test.jpg" class="img-fluid" alt="man and woman exercising" />
                 <div class="cta-text">
                     <div class="overlay"></div>
@@ -24,48 +39,48 @@
                         shop now
                     </a>
                 </div>
-            </div>
+            </div> -->
             <section class="category">
                 <div class="aos-animate" data-aos="flip-left">
                     <h2 class="text-center text-uppercase mt-1">Shop</h2>
-                    <div class="row mb-5">
-                        <!-- <div class="col-sm col-md">
+                    <div class="row mb-5 justify-content-center">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                     <div class="card" style="">
                                         <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" class="card-img-top" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">Nutrition</h5>
+                                            <h5 class="card-title fs-6 fw-bold">Nutrition</h5>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                            <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                                            <a href="/products/?category=nutrition" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                                         </div>
                                     </div>
-                                </div> -->
-                        <div class="col-sm">
+                                </div>
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card" style="">
                                 <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">Equipment</h5>
+                                    <h5 class="card-title fs-6 fw-bold">Equipment</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="/products/?category=fitness_equipment" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                                    <a href="/products/?category=fitness_equipment" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card" style="">
                                 <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">Apparel</h5>
+                                    <h5 class="card-title fs-6 fw-bold">Apparel</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,shorts_women,bodysuits" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                                    <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,shorts_women,bodysuits" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card" style="">
                                 <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">Equipment New 1</h5>
+                                    <h5 class="card-title fs-6 fw-bold">Nutrition</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                                    <a href="/products/?category=nutrition" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                                 </div>
                             </div>
                         </div>
@@ -75,24 +90,24 @@
     
             <section class="section-train">
                 <div class="container-fluid">
-                    <h2>Train</h2>
-                    <div class="row">
-                        <div class="col-sm">
+                    <h2 class="text-center">Train</h2>
+                    <div class="row text-center">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class=""><i class="fa-solid fa-person-running fa-2xl"></i></div>
                             <span>Running</span>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quis sequi ipsa. Suscipit, provident repudiandae. At a omnis enim, illum ex consequatur et, quas temporibus ad, maxime perspiciatis nobis id!</p>
                         </div>
-                        <div class="col-sm">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class=""><i class="fa-solid fa-dumbbell fa-2xl"></i></div>
                             <span>Weights</span>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nisi non, voluptas repellendus cupiditate similique odio sed, iusto minus quia fugit hic id perferendis quo laboriosam soluta, ullam eius magnam.</p>
                         </div>
-                        <div class="col-sm">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class=""><i class="fa-solid fa-heart fa-2xl"></i></div>
                             <span>Cardio</span>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia pariatur minus velit culpa sed voluptatibus consequuntur deleniti ipsa maiores vero? Incidunt nam labore dolorem! Ullam similique veritatis explicabo corporis reiciendis.</p>
                         </div>
-                        <div class="col-sm">
+                        <div class="col-sm col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class=""><i class="fa-solid fa-blender fa-2xl"></i></div>
                             <span>Running</span>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolor nam nostrum natus facilis dolores fugiat, sequi reiciendis dolore cupiditate rem sint possimus unde explicabo cumque quidem fugit molestiae accusantium.</p>
