--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
             </nav>
         </div>
         {% comment %} <!-- Information Banner --> {% endcomment %}
-        <div class="container-fluid mb-2 px-0">
+        <div class="container-fluid px-0">
             <div class="row text-center delivery-info">
                 <div class="col">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
