--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,16 +23,16 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
-.primary-heading,
-.secondary-heading {
+/* .primary-heading {
     font-family: 'Ropa Sans', sans-serif;
-}
+} */
 
 .card-title,
 .card-text,
 .product-name,
 .product-price,
-.product-description {
+.product-description,
+.secondary-heading {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
