--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
 
         <!-- Mobile and main nav area -->
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light secondary-heading">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
