Refactor: Change margins on product details

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -11,6 +11,10 @@
 {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
+    type="text/css" />
+    <link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/base.css"
+    type="text/css" />
 <!-- Overlay white background -->
 <div class="overlay"></div>
 <!-- Main Add Products Container -->
