--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
     </header>
-    <!-- Toast messages -->
+    Toast messages -->
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
