--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -8,13 +8,17 @@
     </div>
 </div>
 {% endblock %} {% block content %}
+<link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
+    type="text/css" />
+    <link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/base.css"
+    type="text/css" />
 <!-- Overlay white background -->
 <div class="overlay"></div>
 <!-- Main Products Details Container -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-            <div class="image-container my-5">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 mt-5">
+            <div class="image-container">
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank">
                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" />
@@ -26,7 +30,7 @@
                 {% endif %}
             </div>
         </div>
-        {% comment %} <div class="col"> {% endcomment %}
+        {% comment %} <div class="col-12 col-md-6 col-lg-4 mt-5"> {% endcomment %}
             {% comment %} <div class="product-details-container mb-5 mt-md-5"> {% endcomment %}
                 {% comment %} <h4 class="mb-2 product-name">{{ product.name }}</h4> {% endcomment %}
                 {% comment %} <div class="pricing" style="display: flex;"> {% endcomment %}
@@ -41,11 +45,10 @@
                     {% comment %} {% endif %} {% endcomment %}
                 {% comment %} </div> {% endcomment %}
                 <!-- Main Products Container -->
-                <div class="col-12 col-md-6 col-lg-4 mt-5">
-                    <h4 class="mt-5 mb-2 product-name">{{ product.name }}</h4>
-                    <div class="pricing" style="display: flex;">
-                        <p class="lead mb-2 product-price">£{{ product.price }}</p>
-                    <div class="product-details-container mb-5 mt-2">
+                <div class="col-12 col-md-6 col-lg-4 ms-5 mt-5">
+                        <h4 class="product-name">{{ product.name }}</h4>
+                        <p class="lead product-price">£{{ product.price }}</p>
+                        <!-- Products catergory -->
                         {% if product.category %}
                         <p class="small mt-1 mb-0 mt-5">
                             <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}"> <i
@@ -54,7 +57,7 @@
                         {% endif %}
                         <!-- Products rating -->
                         {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1 mb-2"></i>{{ product.rating }} / 5</small>
+                        <small class="text-muted"><i class="fas fa-star mr-1 mb-3"></i>{{ product.rating }} / 5</small>
                         {% else %}
                         <small class="text-black">No Rating</small>
                         {% endif %}
