--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,6 +10,9 @@
 {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
+    type="text/css" />
+
 <!-- Main Products Container -->
 <div class="container-fluid">
     <div class="row">
