--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no />
+    <meta name="description" content="Welcome to Love Fitness. Want to achieve all your fitness goals? This site is for you.">
 
     {% endblock %}
     {% block extra_meta %}
